deploy/app.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exporterhub
  labels:
    app: exporterhub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: exporterhub
  template:
    metadata:
      labels:
        app: exporterhub
    spec:
      containers:
        - name: exporterhub
          image: ddiiwoong/exporterhub:0.26
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: exporterhub-service
spec:
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 32001
      name: http
  type: NodePort
  selector:
    name: exporterhub
