deploy/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: exporterhub-ingress
spec:
  backend:
    serviceName: exporterhub-service
    servicePort: 5000
